--- a/produktliste.html
+++ b/produktliste.html
@@ -24,50 +24,24 @@
             <h1 class="overskrift">HERRE TØJ</h1>
         </div>
 
-            <section class="grid_1-1-1-1">
-                <article class="grid-item">
-                    <a href="produkt.html">
-                        <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="">
-                    </a>
-                    <p class="plist">Blue T20 Indian Cricket Jersey </p>
-                    <p class="pris">699 DKK</p>
+        <div class="grid_1-1-1-1">
+            <template id="smallProductTemplate">
+                <article class="product">
+                    <p class="id">1163 </p>
+                    <p class="gender">Men</p>
+                    <p class="category">Apparel</p>
+                    <p class="subcategory">Topwear</p>
+                    <p class="articletype">Tshirts</p>
+                    <p class="season">Summer</p>
+                    <p class="productionyear">2011</p>
+                    <p class="productdisplayname">Sahara Team India Fanwear Round Neck Jersey</p>
+                    <p class="price">895</p>
+                    <p class="discount">null</p>
+                    <p class="brandname">Nike</p>
+                    <p class="soldout">0</p>
                 </article>
-
-                <article class="grid-item">
-                    <a href="produkt.html">
-                        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1165.webp" alt="">
-                    </a>
-                    <p class="plist">Mean Team India Cricket Jersey </p>
-                    <p class="pris">349 DKK</p>
-                </article>
-
-                <article class="grid-item">
-                    <a href="produkt.html">
-                        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1528.webp" alt="">
-                    </a>
-                    <p class="plist">Black fleece jacket</p>
-                    <p class="pris">499 DKK</p>
-                </article>
-
-                <article class="grid-item">
-                    <a href="produkt.html">
-                        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1526.webp" alt="">
-                    </a>
-                    <p class="plist">Big Cat Backpack Black </p>
-                    <p class="førpris">399 DKK</p>
-                    <P class="pris">199,5 DKK</P>
-                </article>
-
-        <div class="BoxUdsolgt">
-            UDSOLGT
+            </template>
         </div>
-
-        <div class="Rabat">
-            50%
-        </div>
-
-        </section>
-
     </main>
 
     <script src="produktliste.js"></script>
