--- a/produktliste.html
+++ b/produktliste.html
@@ -39,6 +39,7 @@
                     <p class="discount">null</p>
                     <p class="brandname">Nike</p>
                     <p class="soldout">0</p>
+                    <img src="https://kea-alt-del.dk/t7/images/webp/640/${productid}.webp" class="image1" alt="billede">
                 </article>
             </template>
         </div>
