--- a/produktliste.html
+++ b/produktliste.html
@@ -40,11 +40,17 @@
                     <p class="brandname">Nike</p>
                     <p class="soldout">0</p>
                     <img src="https://kea-alt-del.dk/t7/images/webp/640/${productid}.webp" class="image1" alt="billede">
+                    <div class="Rabat hidden">
+                        50%
+                    </div>
+                    <div class="Udsolgt hidden">
+                        UDSOLGT
+                    </div>
+
+                    <a class="read-more" href="produkt.html">LÆS MERE</a>
                 </article>
             </template>
         </div>
-
-        <button type="button">Sold Out</button>
     
     </main>
 
