--- a/produkt.html
+++ b/produkt.html
@@ -20,41 +20,13 @@
         </nav>
     </header>
 
-    <br>
-    <br>
-    <br>
-    <main>
 
-        <div class="produktvisning">
-            <section class="grid_2-1">
-                <div class="grid-item">
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" class="produktslut" alt="produkt1">
-                </div>
+    <section class="purchaseBox">
+    <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+    <p>Nike, Tshirts</p>
+    form
 
-                <div class="grid-itemptekst">
-                    <h1 class="overskrift">Big Cat Backpack Black </h1>
-                    <br>
-
-                    <p class="pførpris">399 DKK</p>
-                    <P class="pnypris">199,5 DKK</P>
-
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, esse corporis molestias ad maiores
-                        vitae optio quibusdam ex id quidem odio perspiciatis voluptas quisquam fugiat itaque beatae
-                        officia amet modi!</p>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium distinctio, saepe possimus
-                        commodi odio aliquam. Fuga quis fugiat excepturi voluptate, recusandae iusto temporibus
-                        doloremque! Laborum perspiciatis necessitatibus totam quis harum.</p>
-                    <br>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt aliquam et laborum dolorum
-                        illum commodi hic magni ratione quae vel a, reiciendis eos. Reiciendis omnis perferendis enim
-                        amet? Quae, laudantium.</p>
-                </div>
-
-            </section>
-
-        </div>
+    </section>
     </main>
     <script src="produkt.js"></script>
 </body>
