--- a/kategori.html
+++ b/kategori.html
@@ -20,21 +20,16 @@
 
 <body>
     <main>
-        <h2 class="overskriftmenu">MENU</h2>
-
-        <div class="kategori">
-            <a href="produktliste.html" class="kategoriknap" >HERRE</a>
-            <br>
-            <a href="produktliste.html" class="kategoriknap" >DAME</a>
-            <br>
-            <a href="produktliste.html" class="kategoriknap" >TASKER</a>
-            <br>
-            <a href="produktliste.html" class="kategoriknap" >UDSTYR</a>
+        <div class="brandList">
+            <section class="letterGroup">
+                <template>
+                    <li><a href="produktliste.html">Accessories</a></li>
+                </template>
+                <ol></ol>
+            </section>
         </div>
-
-
     </main>
-
+    <script src="kategori.js"></script>
 </body>
 
 </html>
