--- a/produkt.html
+++ b/produkt.html
@@ -8,7 +8,7 @@
     <title>Produkt</title>
 </head>
 
-<body>
+<body class="product">
 
     <header>
         <nav class="navigation">
@@ -20,15 +20,30 @@
         </nav>
     </header>
 
+    <main>
 
-    <section class="purchaseBox">
-    <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-    <p>Nike, Tshirts</p>
-    form
+        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1163.webp" class="imageprodukt" alt="billede">
 
-    </section>
+        <article class="purchaseBox">
+            <h2 class="brandname">Nike</h2>
+            <h3 class="productdisplayname">Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p class="description">Blue round neck Sahara Team India jersey, has short sleeves, print on the
+                chest
+                and back chest<br><br>Warranty for manufacturing defects: 6 months (not valid on products with
+                more
+                than 20% discount)</p>
+            <p class="materialcaredesc">100% polyester<br>Machine wash</p>
+            
+            <div class="Rabat hidden">
+                50%
+            </div>
+            <div class="Udsolgt hidden">
+                UDSOLGT
+            </div>
+        </article>
+
+        <script src="produkt.js"></script>
     </main>
-    <script src="produkt.js"></script>
 </body>
 
 </html>
