--- a/produktliste.html
+++ b/produktliste.html
@@ -24,30 +24,23 @@
             <h1 class="overskrift">HERRE TØJ</h1>
         </div>
 
-        <div class="grid_1-1-1-1">
+        <div class="grid">
             <template id="smallProductTemplate">
                 <article class="product">
-                    <p class="id">1163 </p>
-                    <p class="gender">Men</p>
-                    <p class="category">Apparel</p>
-                    <p class="subcategory">Topwear</p>
+                    <a href="produkt.html"><img src="https://kea-alt-del.dk/t7/images/webp/640/${product.id}.webp" class="image1" alt="billede"></a>
+                    <h2 class="productdisplayname">Sahara Team India Fanwear Round Neck Jersey</h2>
+                    <p class="brandname">Nike</p>
                     <p class="articletype">Tshirts</p>
-                    <p class="season">Summer</p>
-                    <p class="productionyear">2011</p>
-                    <p class="productdisplayname">Sahara Team India Fanwear Round Neck Jersey</p>
                     <p class="price">895</p>
                     <p class="discount">null</p>
-                    <p class="brandname">Nike</p>
                     <p class="soldout">0</p>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/${productid}.webp" class="image1" alt="billede">
                     <div class="Rabat hidden">
-                        50%
+                        SALE %
                     </div>
                     <div class="Udsolgt hidden">
                         UDSOLGT
                     </div>
 
-                    <a class="read-more" href="produkt.html">LÆS MERE</a>
                 </article>
             </template>
         </div>
