sidste ændring_produkt side virker ikke

--- a/kategori.html
+++ b/kategori.html
@@ -20,14 +20,11 @@
 
 <body>
     <main>
-        <div class="brandList">
-            <section class="letterGroup">
+            <section class="grid1">
                 <template>
                     <li><a href="produktliste.html">Accessories</a></li>
                 </template>
-                <ol></ol>
             </section>
-        </div>
     </main>
     <script src="kategori.js"></script>
 </body>
